<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTDapp</string>
    <string name="title_all">All</string>
    <string name="title_email">E-Mail</string>
    <string name="title_phonecalls">Phone Calls</string>
    <string name="title_errands">Errands</string>
    <string name="title_meetings">Meetings</string>
    <string name="title_review">Review</string>
    <string name="title_computer">Computer</string>
    
    <string name="subject">Subject:</string>
    <string name="description">Description:</string>
    <string name="priority">Priority:</string>
    <string name="folder">Folder:</string>
    <string name="username">Gmail Account Username</string>
    <string name="password">Gmail Account Password</string>
    <string name="add_to_project">Add to Project:</string>
    <string name="no_projects">No Projects</string>
    
    <string name="title_inbox">Inbox</string>
    <string name="title_projects">Projects</string>
    <string name="title_nextactions">Next Actions</string>
    <string name="title_scheduled">Scheduled</string>
    <string name="title_delegated">Delegated</string>
    <string name="title_somedaymaybe">Someday, Maybe</string>
    <string name="title_references">References</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_add_account">Accounts</string>
    
    
    
    <string-array name="folders_array">
        <item>Inbox</item>
        <item>Next Actions</item>
        <item>Projects</item>
        <item>Scheduled</item>
        <item>Pending/Delegated</item>
        <item>References</item>
        <item>Someday/Maybe</item>
    </string-array>

</resources>