<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
     <item
        android:id="@+id/menu_add_account"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_add_account"
        android:icon="@drawable/device_access_new_account"/>
     <item
        android:id="@+id/menu_add"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add"
        android:icon="@drawable/content_new_event"/>
     <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="Search"
        android:icon="@drawable/action_search"/>

</menu>